Added pseudo elements and DOM nodes topics
Added pseudo elements and DOM nodes topics

--- a/pseudo-elements.html
+++ b/pseudo-elements.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <title>Pseudo-elements</title>
+    <title> Pseudo Elements </title>
   </head>
-  <body>
-    <h1>Pseudo-elements</h1>
-    
-  </body>
+
+<h1> Mike McCoy: Pseudo Elements </h1>
+
+  <h2>Article 1: Understanding Pseudo-Element :Before And :After</h2>
+  <h2><a href="http://www.hongkiat.com/blog/pseudo-element-before-after/">hongkiat.com pseudo elements</a></h2>
+
+    <h3>This article explains the basics of pseudo elements and how they can let you add extra markup in CSS to an HTML markup document, instead of just using CSS for styling. It focuses on just the before and after elements to keep it simple for the reader. It explains the difference between pseudo elements and pseudo classes, denoted with the double colon. It sounds like it&rsquo;s a fake element that behaves like a real element, that you can then style. </h3>
+
+<br>
+
+  <h2>Article 2: CSS Pseudo Elements</h2>
+  <h2><a href="http://www.cssbasics.com/css-pseudo-elements/">cssbasics.com pseudo elements</a></h2>
+
+    <h3>This article covers similar ground. It explains the syntax difference compared to regular CSS in regards to the colon, similar to the first article. They do a nice job of categorizing everything, from the elements you can expect to deal with, to the actual lines of code you&rsquo;ll need to plug in. They cover the use of the paragraph tag, which the previous article didn&rsquo;t really get into. They also list out some of the types of elements you can use a pseudo element for. I&rsquo;m still not totally clear on pseudo elements, but this was a good first exposure to the concept.</h3>
 </html>
